erDiagram
    users ||--|{ ratings : "rates"
    movies ||--|{ ratings : "is_rated"

    movies ||--|{ movie_genres : "has"
    genres ||--|{ movie_genres : "belongs_to"

    users ||--|{ user_genre_ratings : "has"
    genres ||--|{ user_genre_ratings : "evaluates"

    users {
        bigint id PK
        string user_name "NOT NULL, UNIQUE"
        string email "NOT NULL, UNIQUE"
        string password "NOT NULL"
        int age "CHECK (age >= 0 AND age <= 120)"
    }

    movies {
        bigint id PK
        string movie_name "NOT NULL, UNIQUE"
        date release_date "NOT NULL"
    }

    genres {
        bigint id PK
        string genre_name "NOT NULL, UNIQUE"
    }

    ratings {
        bigint user_id PK, FK
        bigint movie_id PK, FK
        decimal rating "CHECK (rating >= 0 AND rating <= 5)"
        timestamptz rated_at "DEFAULT CURRENT_TIMESTAMP"
    }

    movie_genres {
        bigint movie_id PK, FK
        bigint genre_id PK, FK
    }

    user_genre_ratings {
        bigint user_id PK, FK
        bigint genre_id PK, FK
        decimal avg_rating "CHECK (avg_rating >= 0 AND avg_rating <= 5)"
    }